Improve schema apply/compatibility